<resources>
    <string name="app_name">Qurban.In</string>
    <string name="registered">Terdaftar</string>
    <string name="execution">Pelaksanaan</string>
    <string name="deliver">Pengambilan</string>
    <string name="stock">Ketersediaan</string>
    <string name="register">Daftar</string>
    <string name="status_qurban">Status Qurban</string>
    <string name="text_lets_pay">Ayo Bayar!</string>
    <string name="text_note_pricing">%s / Pekurban</string>
    <string name="rekening">Rekening %s</string>
    <string name="qurban_payment">Pembayaran Qurban</string>
    <string name="summary_payment">Ringkasan Pembayaran</string>
    <string name="qurban_item">Qurban %s</string>
    <string name="price">Rp. %s</string>
    <string name="total">Total</string>
    <string name="text_confirm">Konfirmasi!</string>
    <string name="text_confirm_payment">Konfirmasi Pembayaran</string>
    <string name="history">Daftar Riwayat</string>
    <string name="organizer_name">Penyelenggara</string>
    <string name="organizer_address">Alamat Penyelenggara</string>
    <string name="account_name">Nama</string>
    <string name="account_email">contoh@email.com</string>
    <string name="change_profile">Ubah Profil</string>
    <string name="qurban_registered">Qurban Terdaftar</string>
    <string name="iv_description_logo">Gambar Aplikasi Qurban.in</string>
    <string name="iv_description_logout">Gambar Logout Akun</string>
    <string name="illus_register">Gambar ilustrasi daftar</string>
    <string name="illus_login">Gambar ilustrasi masuk</string>
    <string name="accout_register">Daftar akun</string>
    <string name="email">Email</string>
    <string name="password">Kata Sandi</string>
    <string name="address">Alamat</string>
    <string name="user_type">Warga/Penyelenggara</string>
    <string name="have_account">Sudah punya akun?</string>
    <string name="login">Masuk</string>
    <string name="search_organizer">Cari Penyelenggara</string>
    <string name="back_to_previous_page">Kembali ke halaman sebelumnya</string>
    <string name="app_logo">Logo aplikasi</string>
    <string name="dummy_user_greeting">Selamat Pagi, Reihan</string>
    <string name="dummy_user_location">Lokasi Belum Diatur</string>
    <string name="province">Provinsi</string>
    <string name="regency">Kabupaten</string>
    <string name="district">Kecamatan</string>
    <string name="village">Kelurahan/Desa</string>
    <string name="ex_province">ex: Jawa Tengah</string>
    <string name="ex_regency">ex: Banyumas</string>
    <string name="ex_district">ex: Purwokerto</string>
    <string name="ex_village">ex: Berkoh</string>
    <string name="lets_search">Ayo cari!</string>
    <string name="set_location">Atur Lokasi</string>
    <string name="dummy_organizer_name">Qurban Masjid Al-Ikhlas</string>
    <string name="dummy_organizer_location">Berkoh, Purwokerto Selatan</string>
    <string name="dummy_total_goat">5/10</string>
    <string name="dummy_total_cow">5/10</string>
    <string name="image_organizer">Gambar penyelenggara</string>
    <string name="enter_current_location">Masukkan Lokasi Terkini</string>
    <string name="nearest_organizer">Penyelenggara Terdekat</string>
    <string name="loginAccount">Masuk ke akun</string>
    <string name="kata_sandi">Kata Sandi</string>
    <string name="Login">Masuk</string>
    <string name="notHaveAccount">Tidak punya akun?</string>
    <string name="createAccount">Daftar</string>
    <string name="label_event_stock">Ketersediaan</string>
    <string name="label_event_date">Pelaksanaan</string>
    <string name="label_event_time_take">Pengambilan</string>
    <string name="home">Beranda</string>
    <string name="profile">Profil</string>
    <string name="email_already_used">Email sudah digunakan!</string>
    <string name="register_failed">Register gagal! Coba lagi nanti</string>
    <string name="field_required">Isi terlebih dahulu!</string>
    <string name="select_item_required">Pilih terlebih dahulu!</string>
    <string name="name_is_not_valid">Nama hanya berisi huruf!</string>
    <string name="email_is_not_valid">Masukkan email yang sesuai!</string>
    <string name="password_length_is_not_valid">Min. 8 karakter</string>
    <string name="textStock">%1$s / %2$s</string>
    <string name="textDescDialogRegister">Anda akan mendaftar %s dengan tagihan %s</string>
    <string name="register_qurban">Daftar Qurban</string>
    <string name="cd_icon_goat">icon_goat</string>
    <string name="cd_icon_cow">cd icon cow</string>
    <string name="text_not_nearest_event">Tidak Ada Event Terdekat</string>
    <string name="unpaid">Belum Lunas</string>
    <string name="sold">Lunas</string>
    <string name="cancel">Batal</string>
    <string name="execute">Terpotong</string>
    <string name="ongoing">Sedang Berlangsung</string>
    <string name="available">Tersedia</string>
    <string name="cardNumber">Rekening %s</string>
    <string name="havent_number_card">Tidak ada nomor rekening</string>
    <string-array name="user_type">
        <item>Warga</item>
        <item>Penyelenggara</item>
    </string-array>
</resources>