<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/green_100"
    android:clipChildren="false"
    android:clipToPadding="false"
    android:padding="24sp"
    tools:context=".ui.authentication.ProfileFragment">

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_logo"
        android:contentDescription="@string/iv_description_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_logout_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_logout"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/iv_description_logout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/iv_profile_picture"
        android:layout_width="144dp"
        android:layout_height="144dp"
        android:layout_marginTop="48dp"
        android:src="@drawable/ic_profile"
        app:civ_border_width="4dp"
        app:civ_border_color="@color/green_40"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_logo" />

    <TextView
        android:id="@+id/tv_profile_name"
        style="@style/TextBody.Medium.HeadlineSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_profile_picture"
        tools:text="@string/account_name" />

    <TextView
        android:id="@+id/tv_email"
        style="@style/TextBody"
        android:textSize="12sp"
        android:textColor="@color/grey_20"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_profile_name"
        tools:text="@string/account_email" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_change_profile"
        style="@style/Button"
        android:layout_marginTop="24dp"
        android:text="@string/change_profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_email" />

    <TextView
        android:id="@+id/tv_registered_label"
        style="@style/TextBody.Medium.BodyLarge"
        android:textColor="@color/green_40"
        android:layout_marginTop="36dp"
        android:text="@string/qurban_registered"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_change_profile" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_registered_qurban"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="12dp"
        tools:listitem="@layout/item_registered_qurban"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_registered_label" />

</androidx.constraintlayout.widget.ConstraintLayout>