<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbarSize="0dp"
    style="@style/ContainerScreen"
    android:fitsSystemWindows="true"
    android:clipChildren="false"
    android:clipToPadding="false"
    tools:context=".ui.home.HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:clipChildren="false"
        android:clipToPadding="false"
        >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:contentDescription="@string/app_logo"
            android:src="@drawable/ic_logo" />

        <TextView
            android:id="@+id/tv_greeting"
            style="@style/TextBody.Medium.BodyLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/dummy_user_greeting" />

        <TextView
            android:id="@+id/tv_user_location"
            style="@style/TextBody.Bold.BodyLarge"
            android:layout_width="match_parent"
            android:layout_marginBottom="24dp"
            android:maxLines="2"
            android:text="@string/dummy_user_location"
            android:textColor="@color/green_20" />

        <androidx.appcompat.widget.SearchView
            android:id="@+id/search_view_organizer"
            style="@style/SearchViewStyle"
            android:layout_marginTop="8dp"
            android:background="@drawable/bg_custom_input"
            android:inputType="none"
            android:theme="@style/SearchViewStyle"
            app:iconifiedByDefault="false"
            app:queryHint="@string/search_organizer" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="24dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp"
            app:cardMaxElevation="4dp"
            app:cardUseCompatPadding="true"
            app:cardPreventCornerOverlap="false">

            <include
                android:id="@+id/cv_search_organizer"
                layout="@layout/item_dialog_search_organizer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </androidx.cardview.widget.CardView>


        <TextView
            style="@style/TextBody.Medium.BodyLarge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:text="@string/nearest_organizer" />
        <TextView
            android:id="@+id/empty_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:textSize="16sp"
            android:visibility="gone"
            android:textAlignment="center"
            android:background="@drawable/bg_rounded_8dp"
            android:backgroundTint="@color/green_100"
            android:textColor="@color/green_20"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/text_not_nearest_event"/>
        <ProgressBar
            android:id="@+id/progressBar"
            android:indeterminateTint="@color/green_40"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_nearest_organizer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="24dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/item_nearest_organizer" />
    </LinearLayout>
</ScrollView>