<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginVertical="6dp"
    app:cardCornerRadius="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="6dp">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.33" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.77" />

        <TextView
            android:id="@+id/tv_headline_organizer"
            style="@style/TextBody.Medium"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/organizer_name" />

        <TextView
            android:id="@+id/tv_status_container"
            style="@style/TextBody.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_rounded_8dp"
            android:backgroundTint="@color/purple"
            android:text="@string/status_qurban"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:padding="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline_2"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_address"
            style="@style/TextBody"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:textColor="@color/grey_40"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_headline_organizer"
            tools:text="@string/organizer_address" />


        <TextView
            android:id="@+id/tv_registered_label"
            style="@style/TextBody"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/registered"
            app:layout_constraintEnd_toStartOf="@+id/guideline_1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_address" />

        <TextView
            android:id="@+id/tv_name_stock"
            style="@style/TextBody"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/grey_40"
            app:layout_constraintEnd_toStartOf="@+id/guideline_1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_registered_label"
            tools:text="@string/qurban_item" />

        <TextView
            android:id="@+id/tv_execution_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/execution"
            app:layout_constraintStart_toStartOf="@+id/guideline_1"
            app:layout_constraintTop_toBottomOf="@+id/tv_address" />

        <TextView
            android:id="@+id/tv_execution_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/grey_40"
            app:layout_constraintStart_toStartOf="@+id/guideline_1"
            app:layout_constraintTop_toBottomOf="@+id/tv_execution_label"
            tools:text="@string/execution" />

        <TextView
            android:id="@+id/tv_deliver_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/deliver"
            app:layout_constraintStart_toStartOf="@+id/guideline_2"
            app:layout_constraintTop_toBottomOf="@+id/tv_address" />

        <TextView
            android:id="@+id/tv_deliver_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/grey_40"
            app:layout_constraintStart_toStartOf="@+id/guideline_2"
            app:layout_constraintTop_toBottomOf="@+id/tv_deliver_label"
            tools:text="@string/deliver" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>