<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginEnd="12dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="4dp"
    app:cardMaxElevation="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/iv_nearest_organizer"
            android:layout_width="144dp"
            android:layout_height="144dp"
            android:layout_marginBottom="12dp"
            android:contentDescription="@string/image_organizer"
            android:scaleType="centerCrop"
            android:src="@drawable/dummy_mosque"
            app:shapeAppearanceOverlay="@style/RoundedImage" />

        <TextView
            android:id="@+id/tv_nearest_organizer_name"
            style="@style/TextBody.Medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:text="@string/dummy_organizer_name"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tv_nearest_organizer_location"
            style="@style/TextBody.BodyVerySmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/dummy_organizer_location"
            tools:ignore="SmallSp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_total_goat"
                style="@style/TextBody.BodyVerySmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawablePadding="4dp"
                android:gravity="center_vertical"
                android:text="@string/dummy_total_goat"
                app:drawableStartCompat="@drawable/ic_goat"
                tools:ignore="SmallSp" />

            <TextView
                android:id="@+id/tv_total_cow"
                style="@style/TextBody.BodyVerySmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawablePadding="4dp"
                android:gravity="center_vertical"
                android:text="@string/dummy_total_goat"
                app:drawableStartCompat="@drawable/ic_cow"
                tools:ignore="SmallSp" />
        </LinearLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>